bugfix: leave policy should return default and active